# FinancialBeancount

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  beancount-dedup.example.yaml  example_usage.py  pyproject.toml  requirements.txt  test_dedup.py  test_e2e_pipeline.py
.github/workflows/: ci.yml
beancount_dedup/: __init__.py  account_classifier.py  cli.py  config.py  deduplicator.py  fingerprinter.py  models.py  refund.py  state.py  validator.py
beancount_dedup/converters/: __init__.py  auto_converter.py  base.py  pdf_converter.py  xlsx_converter.py
beancount_dedup/exporters/: __init__.py  beancount.py
beancount_dedup/parsers/: __init__.py  alipay_parser.py  bank_parser.py  base.py  unionpay_parser.py  wechat_parser.py
test_data/: README.md  sample_alipay.csv  sample_bank.csv  sample_wechat.csv
tests/: conftest.py  test_account_classifier.py  test_deduplicator.py  test_exporter.py  test_fingerprinter.py  test_models.py  test_parser_versions.py  test_parsers.py  test_refund.py  test_state.py  test_unionpay_parser.py
